Actualización completa de seguridad